kustomize/environments/overlays/gloo-edge/virtualservice/bookinfo/multi/bookinfo-vs-multi.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo-multi-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'bookinfo.solo.io'
    routes:
      - matchers:
          - prefix: /
        routeAction:
        # ----------------------- Multi Destination ----------------------
            multi:
                destinations:
                - weight: 5
                  destination:
                      upstream:
                          name: bookinfo-v1-productpage-9080
                          namespace: gloo-system
                - weight: 5
                  destination:
                      upstream:
                          name: bookinfo-beta-productpage-9080
                          namespace: gloo-system
